--- a/cursos/espanol/datascience/analysis/unsupervised/Clustering.ipynb
+++ b/cursos/espanol/datascience/analysis/unsupervised/Clustering.ipynb
@@ -914,6 +914,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f1af486",
+   "metadata": {},
+   "source": [
+    "## Metrica de inercia y metodo del codo\n",
+    "\n",
+    "La [metrica de inercia](https://stackoverflow.com/questions/65683128/how-to-plot-the-cost-inertia-values-in-sklearn-kmeans) no es otra cosa que la suma de los cuadrados de la distancia de cada dato a su respectivo centroide. Si bien es utilizada junto con el [metodo del codo](https://en.wikipedia.org/wiki/Elbow_method_(clustering)) para encontrar el numero optimo de clusters en kmeans, esta metrica no es muy recomendable. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "id": "ee59c97a-3a94-40d9-a2ea-0636657e9c6f",
@@ -945,6 +955,17 @@
     "plt.ylabel('SSE')\n",
     "plt.title('Elbow Method')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de9aedc4",
+   "metadata": {},
+   "source": [
+    "## Metrica de Silueta\n",
+    "\n",
+    "La [metrica de silueta](https://en.wikipedia.org/wiki/Silhouette_(clustering)#:~:text=A%20clustering%20with%20an%20average,the%20distances%20become%20more%20similar.) es una mejor metrica para saber cual es el mejor numero de clusters.\n",
+    "Decimos que hemos conseguido una buena agrupacion si la metrica de silueta es mayor a 0.7. Cuanto mayor es el valor de esta metrica mejor."
    ]
   },
   {
