--- a/cursos/espanol/datascience/exercises/exercises.ipynb
+++ b/cursos/espanol/datascience/exercises/exercises.ipynb
@@ -16,6 +16,10 @@
     "- [Framework de Prueba 2](./kaggle-house-pricing/CompetenciaHousePricesKaggle_proceso_no_automatico2.ipynb)\n",
     "- [Prueba y Seleccion de Modelos](./kaggle-house-pricing/CompetenciaHousePricesKaggle_seleccion_entre_varios_modelos.ipynb)\n",
     "\n",
+    "### Regresion Lineal y Polinomial\n",
+    " - [Harvard NY Taxi Exercise](https://github.com/Harvard-IACS/2019-CS109A/blob/master/content/labs/lab04/notebook/cs109a_lab4_regression.ipynb)\n",
+    "\n",
+    "\n",
     "## Time Series Forecasting\n",
     "\n",
     "### [Kaggle: Store Sales - Time Series Forecasting](https://www.kaggle.com/competitions/store-sales-time-series-forecasting)"
