--- a/cursos/espanol/deeplearning/exercises/exercises.ipynb
+++ b/cursos/espanol/deeplearning/exercises/exercises.ipynb
@@ -18,7 +18,11 @@
     "\n",
     "## More\n",
     "\n",
-    "### [OpenAI Examples](https://github.com/openai/openai-cookbook/tree/main/examples)"
+    "### [OpenAI Examples](https://github.com/openai/openai-cookbook/tree/main/examples)\n",
+    "\n",
+    "# Modelos Interesantes:\n",
+    "\n",
+    "- [Prediccion del tiempo](https://research.ibm.com/blog/foundation-model-weather-climate)"
    ]
   }
  ],
