Web Scraping exercises added

--- a/cursos/espanol/datascience/utils/0__feature_engineering.ipynb
+++ b/cursos/espanol/datascience/utils/0__feature_engineering.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "- https://www.kaggle.com/code/willkoehrsen/automated-feature-engineering-basics\n",
     "- https://featuretools.alteryx.com/en/stable/#minute-quick-start\n",
+    "\n",
+    "\n",
+    "\n",
+    "- [Use of kmeans and pca to create new features](https://www.kaggle.com/code/noussairmighri/house-price-prediction-top-4)\n",
     "\n"
    ]
   }
