Add libraries examples

--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -335,7 +335,13 @@
     "- [YOLO](https://github.com/ultralytics/ultralytics) [tutorial](https://www.youtube.com/watch?v=hf9MaEazc9s)\n",
     "- [torchchat: Chat with LLMs Everywhere](https://github.com/pytorch/torchchat)\n",
     "- [Image Generation](https://blackforestlabs.ai/)\n",
-    "- [Stable Fast 3D](https://stability.ai/news/introducing-stable-fast-3d)"
+    "- [Stable Fast 3D](https://stability.ai/news/introducing-stable-fast-3d)\n",
+    "\n",
+    "## Notebooks con ejemplos:\n",
+    "- [YOLOv11 examples](https://colab.research.google.com/github/ultralytics/ultralytics/blob/main/examples/tutorial.ipynb#scrollTo=WFPJIQl_L5HT)\n",
+    "- [Supervision examples](https://colab.research.google.com/github/roboflow-ai/notebooks/blob/main/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb)\n",
+    "- [Zero shot with dino and roboflow](https://colab.research.google.com/github/roboflow-ai/notebooks/blob/main/notebooks/zero-shot-object-detection-with-grounding-dino.ipynb)\n",
+    "- [Supervision cheatsheet](https://roboflow.github.io/cheatsheet-supervision/)"
    ]
   },
   {
