--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -341,6 +341,7 @@
     "- [YOLOv11 examples](https://colab.research.google.com/github/ultralytics/ultralytics/blob/main/examples/tutorial.ipynb#scrollTo=WFPJIQl_L5HT)\n",
     "- [Supervision examples](https://colab.research.google.com/github/roboflow-ai/notebooks/blob/main/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb)\n",
     "- [Zero shot with dino and roboflow](https://colab.research.google.com/github/roboflow-ai/notebooks/blob/main/notebooks/zero-shot-object-detection-with-grounding-dino.ipynb)\n",
+    "- [Count objects crossing the line](https://colab.research.google.com/github/roboflow/supervision/blob/develop/docs/notebooks/count-objects-crossing-the-line.ipynb)\n",
     "- [Supervision cheatsheet](https://roboflow.github.io/cheatsheet-supervision/)"
    ]
   },
