--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -20,7 +20,11 @@
     "\n",
     "## El algoritmo de aprendizaje\n",
     "\n",
-    "Pod\n"
+    "En casos simples donde la cantidad de estados del environment sea pequeña y los conozcamos de antemano podemos utilizar algoritmos de busqueda como DFS o similares para obtener una buena solucion pero ese no es el objetivo del curso. El objetivo es aprender a partir de la exploracion del environment y el metodo de prueba y error. Para ello existen varios algoritmos aunque aqui nos centraremos en el algoritmo llamado Q Learning.\n",
+    "\n",
+    "## La salida\n",
+    "\n",
+    "La salida sera la accion que debera hacer el Agente, el cual si es un robot sera el movimiento que tiene que realizar dicho robot. Dependiendo de su construccion ejecutaremos la rotacion de un motor o la activacion de un dispositivo hidraulico o de otro tipo.\n"
    ]
   },
   {
@@ -30,12 +34,17 @@
    "source": [
     "# Referencias:\n",
     "\n",
+    "### Basic\n",
+    "- [Kaggle RL Course](https://www.kaggle.com/learn/intro-to-game-ai-and-reinforcement-learning)\n",
+    "- [HuggingFace RL Course](https://huggingface.co/learn/deep-rl-course/)\n",
+    "\n",
+    "### Advanced\n",
+    "- [Book: Reinforcement Learning: An Introduction](http://incompleteideas.net/book/the-book-2nd.html)\n",
     "- [OpenAI RL educational resource](https://spinningup.openai.com/en/latest/spinningup/rl_intro.html)\n",
     "- [Stanford Course](https://web.stanford.edu/class/cs234/index.html) - [[Videos]](https://www.youtube.com/watch?v=E3f2Camj0Is&list=PLoROMvodv4rOSOPzutgyCTapiGlY2Nd8u) - [[Code]](https://github.com/tallamjr/stanford-cs234/tree/master)\n",
     "- [Bevan Smith Intro to RL videos](https://www.youtube.com/watch?v=aldWdgUaYRA&list=PLuVnJWOCzbxXcpYnL4WCxRwp8kqHgBoIF)\n",
-    "- [Kaggle RL Course](https://www.kaggle.com/learn/intro-to-game-ai-and-reinforcement-learning)\n",
-    "- [HuggingFace RL Course](https://huggingface.co/learn/deep-rl-course/)\n",
-    "- [Deep Mind RL Video Series](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
+    "- [Deep Mind RL Video Series 1](https://www.youtube.com/playlist?list=PLqYmG7hTraZDM-OYHWgPebj2MfCFzFObQ) and [slides](https://www.davidsilver.uk/teaching/)\n",
+    "- [Deep Mind RL Video Series 2](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
     "- [Temporal Difference Learning by Rich Sutton video series](https://videolectures.net/deeplearning2017_sutton_td_learning/)\n",
     "- [More](https://www.kaggle.com/learn/intro-to-game-ai-and-reinforcement-learning/discussion/499257)\n",
     "- [Another AI Stanford Course](https://www.youtube.com/watch?v=ZiwogMtbjr4&list=PLoROMvodv4rOca_Ovz1DvdtWuz8BfSWL2)\n",
@@ -54,12 +63,6 @@
     "- [Leaderboard](https://huggingface.co/spaces/huggingface-projects/Deep-Reinforcement-Learning-Leaderboard)\n",
     "- [AI vs AI](https://huggingface.co/learn/deep-rl-course/unit7/introduction?fw=pt)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4a7fc73",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
