--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## El algoritmo de aprendizaje\n",
     "\n",
-    "En casos simples donde la cantidad de estados del environment sea pequeña y los conozcamos de antemano podemos utilizar algoritmos de busqueda como DFS o similares para obtener una buena solucion pero ese no es el objetivo del curso. El objetivo es aprender a partir de la exploracion del environment y el metodo de prueba y error. Para ello existen varios algoritmos aunque aqui nos centraremos en el algoritmo llamado Q Learning.\n",
+    "En casos simples donde la cantidad de estados del environment sea pequeña y los conozcamos de antemano podemos utilizar algoritmos de busqueda como DFS o similares para obtener una buena solucion pero ese no es el objetivo del curso. El objetivo es aprender a partir de la exploracion del environment y el metodo de prueba y error. Para ello existen varios algoritmos aunque aqui nos centraremos en el algoritmo llamado Q Learning que crea una tabla donde las filas representan los estados del environment y las columnas las posibles acciones del agente y cada celda el valor de ejecutar cada accion en cada estado. Luego pasaremos a Deep Q Learning cuando los estados y las acciones sean demasiados para ponerlos todos en una tabla.\n",
     "\n",
     "## La salida\n",
     "\n",
