--- a/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
@@ -179,6 +179,7 @@
    "source": [
     "#@title Solucion Ejercicio 1: {display-mode:\"form\"}\n",
     "\n",
+    "from io import BytesIO\n",
     "import requests\n",
     "from PIL import Image\n",
     "from transformers import pipeline\n",
