--- a/cursos/espanol/datascience/algorithms/E2_arbol.ipynb
+++ b/cursos/espanol/datascience/algorithms/E2_arbol.ipynb
@@ -1140,12 +1140,15 @@
    "source": [
     "Referencias:\n",
     "    \n",
-    "- Self Information: https://en.wikipedia.org/wiki/Information_content\n",
-    "- Entropy: https://en.wikipedia.org/wiki/Entropy_(information_theory)\n",
-    "- Information Gain: https://en.wikipedia.org/wiki/Information_gain_(decision_tree)\n",
-    "- Gini Impurity: https://en.wikipedia.org/wiki/Decision_tree_learning#Gini_impurity\n",
-    "- ID3: https://en.wikipedia.org/wiki/ID3_algorithm\n",
-    "- Scikit Learn Decision Tree: https://scikit-learn.org/stable/modules/tree.html#tree-algorithms-id3-c4-5-c5-0-and-cart"
+    "- [Self Informatio](https://en.wikipedia.org/wiki/Information_content)\n",
+    "- [Entropy](https://en.wikipedia.org/wiki/Entropy_(information_theory))\n",
+    "- [Entropy Explained with sheep](https://www.engineersedge.com/thermodynamics/entropy_explained_with_sheep_15961.htm)\n",
+    "- [Information Gain](https://en.wikipedia.org/wiki/Information_gain_(decision_tree))\n",
+    "- [Gini Impurity](https://en.wikipedia.org/wiki/Decision_tree_learning#Gini_impurity)\n",
+    "- [ID3](https://en.wikipedia.org/wiki/ID3_algorithm)\n",
+    "- [Scikit Learn Decision Tree](https://scikit-learn.org/stable/modules/tree.html#tree-algorithms-id3-c4-5-c5-0-and-cart)\n",
+    "- [Gine vs Entropy](https://datascience.stackexchange.com/questions/10228/when-should-i-use-gini-impurity-as-opposed-to-information-gain-entropy)\n",
+    "- [Von Neumanns quote on Entropy](https://mathoverflow.net/questions/403036/john-von-neumanns-remark-on-entropy?newreg=2c5249d632d44ed6b8794f177c3e2cba)"
    ]
   },
   {
