--- a/cursos/espanol/datascience/analysis/A0_intro.ipynb
+++ b/cursos/espanol/datascience/analysis/A0_intro.ipynb
@@ -41,6 +41,10 @@
     "    - [AutoViz](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/analysis/A1.2_eda_autoviz.ipynb)\n",
     "    - [DataPrep](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/analysis/A1.2_eda_dataprep.ipynb)\n",
     "\n",
+    "#### Correlaciones:\n",
+    "- [Correlacions](https://stats.stackexchange.com/questions/119835/correlation-between-a-nominal-iv-and-a-continuous-dv-variable)\n",
+    "- [Como elegir entre Pearson y Spearman](https://stats.stackexchange.com/questions/8071/how-to-choose-between-pearson-and-spearman-correlation)\n",
+    "\n",
     "  \n",
     "#### Tests de distribuciones de probabilidad:\n",
     "  - [Fitter](https://github.com/cokelaer/fitter)"
