--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -19,6 +19,9 @@
     "- [Step by step without math by Miguel Grinberg](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)\n",
     "- [Original Attention Is All You Need paper with code](https://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
     "\n",
+    "Modelos Multimodales:\n",
+    "- [Understanding Multimodal LLMs by Sebastian Raschka](https://www.linkedin.com/pulse/understanding-multimodal-llms-sebastian-raschka-phd-t7h5c/)\n",
+    "\n",
     "Visualiza como funciona ChatGPT:\n",
     "- [Transformer Visualization](https://bbycroft.net/llm)\n",
     "- [Attention Visualization](https://github.com/jessevig/bertviz)\n",
