--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -62,7 +62,13 @@
     "- [HF Certification Progress](https://huggingface.co/spaces/ThomasSimonini/Check-my-progress-Deep-RL-Course)\n",
     "- [Certification Process](https://huggingface.co/learn/deep-rl-course/en/communication/certification)\n",
     "- [Leaderboard](https://huggingface.co/spaces/huggingface-projects/Deep-Reinforcement-Learning-Leaderboard)\n",
-    "- [AI vs AI](https://huggingface.co/learn/deep-rl-course/unit7/introduction?fw=pt)"
+    "- [AI vs AI](https://huggingface.co/learn/deep-rl-course/unit7/introduction?fw=pt)\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Cool Papers:\n",
+    "\n",
+    "- [Aloha](https://mobile-aloha.github.io)"
    ]
   }
  ],
