--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -329,13 +329,15 @@
    "id": "83aba3f0-4822-4084-bdf4-748c391fdc70",
    "metadata": {},
    "source": [
-    "# Otras librerias open source interesantes:\n",
+    "# Otras librerias y modelos open source interesantes:\n",
     "- [GitHub Models: alternativa a HuggingFace](https://github.blog/news-insights/product-news/introducing-github-models/)\n",
     "- [Supervision para tareas de computer vision](https://github.com/roboflow/supervision?tab=readme-ov-file)\n",
     "- [YOLO](https://github.com/ultralytics/ultralytics) [tutorial](https://www.youtube.com/watch?v=hf9MaEazc9s)\n",
     "- [torchchat: Chat with LLMs Everywhere](https://github.com/pytorch/torchchat)\n",
     "- [Image Generation](https://blackforestlabs.ai/)\n",
     "- [Stable Fast 3D](https://stability.ai/news/introducing-stable-fast-3d)\n",
+    "- [SAM Segment Anything](https://segment-anything.com)\n",
+    "- [CoTracker3](https://cotracker3.github.io)\n",
     "\n",
     "## Notebooks con ejemplos:\n",
     "- [YOLOv11 examples](https://colab.research.google.com/github/ultralytics/ultralytics/blob/main/examples/tutorial.ipynb#scrollTo=WFPJIQl_L5HT)\n",
