--- a/cursos/espanol/deeplearning/3.2_text_generation.ipynb
+++ b/cursos/espanol/deeplearning/3.2_text_generation.ipynb
@@ -86,7 +86,8 @@
    "metadata": {},
    "source": [
     "### Referencias\n",
-    "- https://huggingface.co/tasks/text-generation"
+    "- [hugging face](https://huggingface.co/tasks/text-generation)\n",
+    "- [Que predicen estos modelos?](https://artefact2.github.io/llm-sampling/index.xhtml)"
    ]
   },
   {
