Reference links added

--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -377,6 +377,9 @@
    "id": "550a1445-e61b-4b6b-a06a-ad6c2dfdff38",
    "metadata": {},
    "source": [
+    "## Referencias:\n",
+    "- [Feature Extraction in Images](https://www.kaggle.com/code/lorinc/feature-extraction-from-images)\n",
+    "\n",
     "Dos imagenes de esta unidad fueron obtenidas de wikipedia:\n",
     "\n",
     "- https://en.wikipedia.org/wiki/Edge_detection\n",
@@ -386,7 +389,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
