--- a/cursos/espanol/mlops/E_interesting_stuff.ipynb
+++ b/cursos/espanol/mlops/E_interesting_stuff.ipynb
@@ -7,7 +7,12 @@
     "# Articulos Interesantes\n",
     "\n",
     "- [How we built ngrok's data platform](https://ngrok.com/blog-post/how-we-built-ngroks-data-platform)\n",
-    "- [StackOverflow Tech survey](https://survey.stackoverflow.co/2024/technology#most-popular-technologies)"
+    "- [StackOverflow Tech survey](https://survey.stackoverflow.co/2024/technology#most-popular-technologies)\n",
+    "- [ML in Go with a Python Sidecar](https://news.ycombinator.com/item?id=42108933)\n",
+    "- [SST](https://sst.dev)\n",
+    "- [Terraform](https://www.terraform.io)\n",
+    "- [Apache Kafka](https://kafka.apache.org)\n",
+    "- [Model Monitoring](https://dagshub.com/glossary/mlops-monitoring/)"
    ]
   }
  ],
