--- a/cursos/espanol/mlops/E_interesting_stuff.ipynb
+++ b/cursos/espanol/mlops/E_interesting_stuff.ipynb
@@ -12,7 +12,8 @@
     "- [SST](https://sst.dev)\n",
     "- [Terraform](https://www.terraform.io)\n",
     "- [Apache Kafka](https://kafka.apache.org)\n",
-    "- [Model Monitoring](https://dagshub.com/glossary/mlops-monitoring/)"
+    "- [Model Monitoring](https://dagshub.com/glossary/mlops-monitoring/)\n",
+    "- [KataLog](https://kata-log.rocks/)"
    ]
   }
  ],
