--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -57,6 +57,14 @@
     "\n",
     "---------------------\n",
     "Simple Q learning implementations:\n",
+    "\n",
+    "- [Creating the Environment Part 1](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_PlotingBoards.ipynb)\n",
+    "- [Creating the Environment Part 2](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_RenderAnimation.ipynb)\n",
+    "- [Dummy Agent](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_Maze_DummyAgent.ipynb)\n",
+    "- [A little smarter agent](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_Maze_SmarterAgent.ipynb)\n",
+    "- [Q Learning](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_Maze_QLearning.ipynb)\n",
+    "- [Q learning explanation](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/QLearning_Actualizacion_del_Valor_Q_en_la_Tabla.ipynb)\n",
+    "\n",
     "- [Tic Tac Toe](https://colab.research.google.com/drive/1p1Fdhk0NzWNkogy2KjMz2MV2_yMxV_Bm#scrollTo=Z2uk3Aa8zISC)\n",
     "- [Maze](https://github.com/abhijitmajumdar/Simple_Q_Learning)\n",
     "\n",
