--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -80,7 +80,15 @@
     "\n",
     "Cool Papers:\n",
     "\n",
-    "- [Aloha](https://mobile-aloha.github.io)"
+    "- [Aloha](https://mobile-aloha.github.io)\n",
+    "\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### LeRobot\n",
+    "\n",
+    "- [LeRobot](https://github.com/huggingface/lerobot)\n",
+    "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)"
    ]
   }
  ],
