--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -56,7 +56,7 @@
     "- [Wikipedia](https://en.wikipedia.org/wiki/Q-learning)\n",
     "\n",
     "---------------------\n",
-    "Simple Q learning implementations:\n",
+    "#### Simple Q learning implementations:\n",
     "\n",
     "- [Creating the Environment Part 1](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_PlotingBoards.ipynb)\n",
     "- [Creating the Environment Part 2](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_RenderAnimation.ipynb)\n",
@@ -69,7 +69,7 @@
     "- [Maze](https://github.com/abhijitmajumdar/Simple_Q_Learning)\n",
     "\n",
     "---------------------\n",
-    "Hugging Face RL Course\n",
+    "#### Hugging Face RL Course\n",
     "\n",
     "- [HF Certification Progress](https://huggingface.co/spaces/ThomasSimonini/Check-my-progress-Deep-RL-Course)\n",
     "- [Certification Process](https://huggingface.co/learn/deep-rl-course/en/communication/certification)\n",
@@ -78,7 +78,7 @@
     "\n",
     "-----\n",
     "\n",
-    "Cool Papers:\n",
+    "#### Cool Papers:\n",
     "\n",
     "- [Aloha](https://mobile-aloha.github.io)\n",
     "\n",
