--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -34,41 +34,36 @@
    "source": [
     "# Referencias:\n",
     "\n",
+    "## Home Made Reinforcement Learning:\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Ref:\n",
+    "\n",
+    "- [Gymnasium is a maintained fork of OpenAI’s Gym library. The Gymnasium interface is simple, pythonic, and capable of representing general RL problems](https://gymnasium.farama.org)\n",
+    "- [Stable-Baselines3 Docs - Reliable Reinforcement Learning Implementations](https://stable-baselines3.readthedocs.io/en/master/index.html)\n",
+    "- [Reinforcement Learning Tips and Tricks](https://stable-baselines3.readthedocs.io/en/master/guide/rl_tips.html)\n",
+    "\n",
+    "-----\n",
+    "\n",
     "### Basic\n",
     "- [Kaggle RL Course](https://www.kaggle.com/learn/intro-to-game-ai-and-reinforcement-learning)\n",
     "- [HuggingFace RL Course](https://huggingface.co/learn/deep-rl-course/)\n",
-    "\n",
-    "### RLHF\n",
-    "- [Illustrating Reinforcement Learning from Human Feedback (RLHF)](https://huggingface.co/blog/rlhf)\n",
-    "- [RLHF: Reinforcement Learning from Human Feedback](https://huyenchip.com/2023/05/02/rlhf.html)\n",
     "\n",
     "### Advanced\n",
     "- [Book: Reinforcement Learning: An Introduction](http://incompleteideas.net/book/the-book-2nd.html)\n",
     "- [Notes: Professor Bruno C. da Silva University of Massachusetts Amherst](https://people.cs.umass.edu/~bsilva/courses/CMPSCI_687/Fall2022/Lecture_Notes_v1.0_687_F22.pdf)\n",
     "- [OpenAI RL educational resource](https://spinningup.openai.com/en/latest/spinningup/rl_intro.html)\n",
     "- [Stanford Course](https://web.stanford.edu/class/cs234/index.html) - [[Videos]](https://www.youtube.com/watch?v=E3f2Camj0Is&list=PLoROMvodv4rOSOPzutgyCTapiGlY2Nd8u) - [[Code]](https://github.com/tallamjr/stanford-cs234/tree/master)\n",
-    "- [Bevan Smith Intro to RL videos](https://www.youtube.com/watch?v=aldWdgUaYRA&list=PLuVnJWOCzbxXcpYnL4WCxRwp8kqHgBoIF)\n",
     "- [Deep Mind RL Video Series 1](https://www.youtube.com/playlist?list=PLqYmG7hTraZDM-OYHWgPebj2MfCFzFObQ) and [slides](https://www.davidsilver.uk/teaching/)\n",
     "- [Deep Mind RL Video Series 2](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
     "- [Temporal Difference Learning by Rich Sutton video series](https://videolectures.net/deeplearning2017_sutton_td_learning/)\n",
     "- [More](https://www.kaggle.com/learn/intro-to-game-ai-and-reinforcement-learning/discussion/499257)\n",
     "- [Another AI Stanford Course](https://www.youtube.com/watch?v=ZiwogMtbjr4&list=PLoROMvodv4rOca_Ovz1DvdtWuz8BfSWL2)\n",
-    "- [Wikipedia](https://en.wikipedia.org/wiki/Q-learning)\n",
     "\n",
-    "---------------------\n",
-    "#### Simple Q learning implementations:\n",
+    "-----\n",
     "\n",
-    "- [Creating the Environment Part 1](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_PlotingBoards.ipynb)\n",
-    "- [Creating the Environment Part 2](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_RenderAnimation.ipynb)\n",
-    "- [Dummy Agent](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_Maze_DummyAgent.ipynb)\n",
-    "- [A little smarter agent](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_Maze_SmarterAgent.ipynb)\n",
-    "- [Q Learning](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/HomeMadeRL_Maze_QLearning.ipynb)\n",
-    "- [Q learning explanation](https://github.com/amiune/freecodingtour/blob/main/cursos/espanol/reinforcement_learning/QLearning_Actualizacion_del_Valor_Q_en_la_Tabla.ipynb)\n",
-    "- [Tic Tac Toe](https://colab.research.google.com/drive/1p1Fdhk0NzWNkogy2KjMz2MV2_yMxV_Bm#scrollTo=Z2uk3Aa8zISC)\n",
-    "- [Maze](https://github.com/abhijitmajumdar/Simple_Q_Learning)\n",
-    "\n",
-    "---------------------\n",
-    "#### Hugging Face RL Course\n",
+    "### Hugging Face RL Course\n",
     "\n",
     "- [HF Certification Progress](https://huggingface.co/spaces/ThomasSimonini/Check-my-progress-Deep-RL-Course)\n",
     "- [Certification Process](https://huggingface.co/learn/deep-rl-course/en/communication/certification)\n",
@@ -77,17 +72,47 @@
     "\n",
     "-----\n",
     "\n",
-    "#### Cool Papers:\n",
-    "\n",
-    "- [Aloha](https://mobile-aloha.github.io)\n",
-    "\n",
+    "### RLHF\n",
+    "- [Illustrating Reinforcement Learning from Human Feedback (RLHF)](https://huggingface.co/blog/rlhf)\n",
+    "- [RLHF: Reinforcement Learning from Human Feedback](https://huyenchip.com/2023/05/02/rlhf.html)\n",
     "\n",
     "-----\n",
     "\n",
-    "### LeRobot\n",
+    "### Parameter Optimization:\n",
+    "- [Optuna](https://optuna.org/#code_examples)\n",
+    "- [Automatic Hyperparameter Optimization](https://www.youtube.com/watch?v=AidFTOdGNFQ)\n",
+    "- [Hyperparameter Tuning with Optuna Notebook](https://www.youtube.com/watch?v=ihP7E76KGOI)\n",
     "\n",
+    "-----\n",
+    "\n",
+    "### Open Spiel\n",
+    "- [Open Spiel Github](https://github.com/google-deepmind/open_spiel/tree/master)\n",
+    "\n",
+    "### Unity MLAgents\n",
+    "- [Install Unity Hub and Editor](https://learn.unity.com/tutorial/install-the-unity-hub-and-editor?uv=2022.3)\n",
+    "- [Unity Basics](https://learn.unity.com/tutorial/66f2e7e9edbc2a01255f7970?uv=6&pathwayId=664b6225edbc2a01973f4f19&missionId=664bdda6edbc2a09177bccae#)\n",
+    "- [Unity Game Creation](https://learn.unity.com/course/create-with-code?uv=2022.3)\n",
+    "- [Create a video game with Unity](https://learn.unity.com/course/create-with-code)\n",
+    "- [MLAgents Instalation](https://github.com/Unity-Technologies/ml-agents/blob/develop/docs/Installation.md)\n",
+    "- [Unity MLAgents Intro](https://www.youtube.com/playlist?list=PLzDRvYVwl53vehwiN_odYJkPBzcqFw110)\n",
+    "- [Unity MLAgents Docs](https://github.com/Unity-Technologies/ml-agents/blob/develop/docs/Learning-Environment-Examples.md)\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## Robots\n",
+    "\n",
+    "- [Gymnasium Robotics](https://robotics.farama.org)\n",
+    "- [panda-gym](https://github.com/qgallouedec/panda-gym)\n",
+    "\n",
+    "### LeRobot\n",
     "- [LeRobot](https://github.com/huggingface/lerobot)\n",
-    "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)"
+    "- [SO-100](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md)\n",
+    "  \n",
+    "-----\n",
+    "\n",
+    "#### Cool Papers:\n",
+    "\n",
+    "- [Aloha](https://mobile-aloha.github.io)\n"
    ]
   }
  ],
