--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -8,7 +8,7 @@
     "# Intro\n",
     "\n",
     "\n",
-    "En este caso la entrada sera el mundo, o el medioambiente (enviroment en ingles) y la salida sera una accion de un robot ya sea virtual o fisico al que llamaremos agente (agent en ingles).\n",
+    "En este caso la entrada sera el mundo, o el entorno (enviroment en ingles) y la salida sera una accion de un robot ya sea virtual o fisico al que llamaremos agente (agent en ingles).\n",
     "\n",
     "Analicemos como pueden ser cada uno de estos elementos, la entrada, el proceso y la salida:\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "Como dijimos la entrada es el mundo, en el caso mas complejo la entrada seran imagenes, sonidos, olores, datos de sensores tactiles y cualquier otro tipo de sensor que nos imaginemos para obtener la mayor informacion posible del mundo que nos rodea (environment).\n",
     "\n",
-    "Comenzaremos con ejemplos de mundos muy simples que van a ser tableros de 3x3 de un juego de laberinto donde hay que encontrar la salida. Luego iremos complejizando el mundo incorporante adversarios y objetos que aparecen que no conociamos y que veremos por primera vez mientras jugamos.\n",
+    "Comenzaremos con ejemplos de mundos muy simples que van a ser tableros de 3x3 de un juego de laberinto donde hay que encontrar la salida. Luego iremos complejizando el mundo incorporando adversarios y objetos que aparecen que no conociamos y que veremos por primera vez mientras jugamos.\n",
     "\n",
     "## El algoritmo de aprendizaje\n",
     "\n",
@@ -36,6 +36,13 @@
     "\n",
     "## Home Made Reinforcement Learning:\n",
     "\n",
+    "- [Unit 1: Creating the environmet](HomeMadeRL_1_Env_v1_solution.ipynb)\n",
+    "- [Unit 2: Creating a Dummy Agent](HomeMadeRL_2_Agent_Dummy_v1_solution.ipynb)\n",
+    "- [Unit 3: Creating a QLearning Agent](HomeMadeRL_3_Agent_QLearning_v1_solution.ipynb)\n",
+    "- [Unit 4: Creating a Deep QLearning Agent with sklearn](HomeMadeRL_4_Agent_DeepQLearning_v1_solution.ipynb)\n",
+    "- [Unit 4.1: Adding Memory Replay](HomeMadeRL_4.1_Agent_DeepQLearning_MemoryReplay_v1_solution.ipynb)\n",
+    "- [Unit 4.2: Converting from sklearn to pytorch](HomeMadeRL_4.2_Agent_DeepQLearning_MemoryReplay_Pytorch_v1_solution.ipynb)\n",
+    "- [Unit 5: Making the Environment compatible with Gymnasium](HomeMadeRL_5_GymEnv_StableBaselines3_v1_solution.ipynb)\n",
     "\n",
     "\n",
     "### Ref:\n",
@@ -69,6 +76,7 @@
     "- [Certification Process](https://huggingface.co/learn/deep-rl-course/en/communication/certification)\n",
     "- [Leaderboard](https://huggingface.co/spaces/huggingface-projects/Deep-Reinforcement-Learning-Leaderboard)\n",
     "- [AI vs AI](https://huggingface.co/learn/deep-rl-course/unit7/introduction?fw=pt)\n",
+    "- [Stable Baselines3 Zoo](https://rl-baselines3-zoo.readthedocs.io/en/master/index.html)\n",
     "\n",
     "-----\n",
     "\n",
