--- a/cursos/espanol/datascience/timeseries/Timeseries.ipynb
+++ b/cursos/espanol/datascience/timeseries/Timeseries.ipynb
@@ -16,11 +16,11 @@
     "PyCaret:\n",
     "- [Ejemplo](https://nbviewer.org/github/pycaret/pycaret/blob/master/tutorials/Tutorial%20-%20Time%20Series%20Forecasting.ipynb)\n",
     "\n",
-    "Descomposicion de Series de Tiempo:\n",
-    "- https://www.kaggle.com/learn/time-series\n",
-    "- https://otexts.com/fpp2/classical-decomposition.html \n",
-    "- https://github.com/zgana/fpp3-python-readalong/blob/master/00-Preface-to-this-readalong.ipynb\n",
-    "- https://github.com/Nixtla/fpp3-python/tree/main"
+    "Cursos sobre Series de Tiempo:\n",
+    "- [Kaggle Learn](https://www.kaggle.com/learn/time-series)\n",
+    "- [Forecasting: Principles and Practice - Monash University](https://otexts.com/fpp3/index.html) - [Code1](https://github.com/zgana/fpp3-python-readalong/blob/master/00-Preface-to-this-readalong.ipynb) - [Code 2](https://github.com/Nixtla/fpp3-python/tree/main)\n",
+    "- [Applied Time Series Analysis - Penn State University](https://online.stat.psu.edu/stat510/)\n",
+    "- [Time Series Analysis HandBook](https://phdinds-aim.github.io/time_series_handbook/Preface/Preface.html)\n"
    ]
   }
  ],
