--- a/cursos/espanol/mlops/0_intro.ipynb
+++ b/cursos/espanol/mlops/0_intro.ipynb
@@ -184,6 +184,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8e42ab5",
+   "metadata": {},
+   "source": [
+    "## El concepto final de MLOps\n",
+    "\n",
+    "Si bien este curso sera solo introductorio y se concentrara en los aspectos mas fundamentales y utiles para el programador, MLOps abarca muchisimo territorio dependiendo de quien lo defina.\n",
+    "\n",
+    "El siguiente [post](https://blog.helix.ml/p/from-clickops-to-gitops-the-evolution) que me parece interesante define tres etapas en la creacion y puesta en produccion de una App de IA:\n",
+    "\n",
+    "1. El Prototipo\n",
+    "   - Usa una interfaz web\n",
+    "   - Define de donde se obtendran los datos\n",
+    "   - Establece la integracion con APIs\n",
+    "   - Testea la funcionalidad basica\n",
+    "2. El Puente\n",
+    "   - Exporta toda la configuracion a archivos de configuracion versionados\n",
+    "   - Mantiene toda la funcionalidad del prototipo\n",
+    "3. El Producto Final\n",
+    "   - Automatiza los tests\n",
+    "   - Establece los pipelines de Integracion y Desarrollo Continuo\n",
+    "   - Monitorea la performance\n",
+    "\n",
+    "En los cursos anteriores de ML e IA hemos visto como crear funciones de test y prototipos con Gradio con lo cual abarcamos bastante bien la primer fase. En este curso intentaremos abarcar mas las dos fases siguientes o al menos entender de que estamos hablando."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "abbd9984-0e28-4812-974d-e9dc7b846210",
    "metadata": {},
    "source": [
