--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -65,7 +65,6 @@
     "- [Deep Mind RL Video Series 1](https://www.youtube.com/playlist?list=PLqYmG7hTraZDM-OYHWgPebj2MfCFzFObQ) and [slides](https://www.davidsilver.uk/teaching/)\n",
     "- [Deep Mind RL Video Series 2](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
     "- [Temporal Difference Learning by Rich Sutton video series](https://videolectures.net/deeplearning2017_sutton_td_learning/)\n",
-    "- [More](https://www.kaggle.com/learn/intro-to-game-ai-and-reinforcement-learning/discussion/499257)\n",
     "- [Another AI Stanford Course](https://www.youtube.com/watch?v=ZiwogMtbjr4&list=PLoROMvodv4rOca_Ovz1DvdtWuz8BfSWL2)\n",
     "\n",
     "-----\n",
@@ -120,7 +119,7 @@
     "\n",
     "#### Cool Papers:\n",
     "\n",
-    "- [Aloha](https://mobile-aloha.github.io)\n"
+    "- [Aloha](https://tonyzhaozh.github.io/aloha/) -> [Mobile Aloha](https://mobile-aloha.github.io) -> [Gymnasium Environment](https://github.com/huggingface/gym-aloha)\n"
    ]
   }
  ],
