--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -61,6 +61,7 @@
     "- [Book: Reinforcement Learning: An Introduction](http://incompleteideas.net/book/the-book-2nd.html)\n",
     "- [Notes: Professor Bruno C. da Silva University of Massachusetts Amherst](https://people.cs.umass.edu/~bsilva/courses/CMPSCI_687/Fall2022/Lecture_Notes_v1.0_687_F22.pdf)\n",
     "- [OpenAI RL educational resource](https://spinningup.openai.com/en/latest/spinningup/rl_intro.html)\n",
+    "- [Multi-Agent Reinforcement Learning: Foundations and Modern Approaches](https://www.marl-book.com)\n",
     "- [Stanford Course](https://web.stanford.edu/class/cs234/index.html) - [[Videos]](https://www.youtube.com/watch?v=E3f2Camj0Is&list=PLoROMvodv4rOSOPzutgyCTapiGlY2Nd8u) - [[Code]](https://github.com/tallamjr/stanford-cs234/tree/master)\n",
     "- [Deep Mind RL Video Series 1](https://www.youtube.com/playlist?list=PLqYmG7hTraZDM-OYHWgPebj2MfCFzFObQ) and [slides](https://www.davidsilver.uk/teaching/)\n",
     "- [Deep Mind RL Video Series 2](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
