--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -105,6 +105,12 @@
     "- [Unity MLAgents Intro](https://www.youtube.com/playlist?list=PLzDRvYVwl53vehwiN_odYJkPBzcqFw110)\n",
     "- [Unity MLAgents Docs](https://github.com/Unity-Technologies/ml-agents/blob/develop/docs/Learning-Environment-Examples.md)\n",
     "\n",
+    "#### Soccer Twos\n",
+    "\n",
+    "- [HF Model Test](https://unity-ml-agents-soccertwos.static.hf.space/index.html)\n",
+    "- [Bryan Oliveira University Goias](https://bryanoliveira.github.io/blog/2021-09-05-soccer-twos-env/)\n",
+    "- [Gym Evn](https://github.com/bryanoliveira/soccer-twos-env)\n",
+    "\n",
     "-----\n",
     "\n",
     "## Robots\n",
